# Tracegate

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  images.yml  release.yml  transit-node-replacement.yml
alembic/: env.py
alembic/versions/: 0d4b3f7a9c12_add_naiveproxy_v4.py  10691de66f04_v0_1_baseline.py  4c2a0f3d3b1a_add_node_endpoint_proxy_fqdn.py  4e9a6b7c8d01_add_entry_ingress_pair_leases.py  7b31d4e9a205_raise_device_limit_to_four.py  8f2d6f1eab44_v0_3_user_profile_and_access_guards.py  92b17df9933b_v0_2_core_changes.py  9a47b278d21c_add_vless_ws_tls_protocol.py  a6c2e4b8d913_add_canonical_node_role_enum_values.py  a9e7c3b2d6f1_add_bot_welcome_acceptance.py  b1d8e8f6a3c4_normalize_connection_variants_for_tracegate2.py  b7e6a1f4c2d9_add_bot_message_ref.py  c4d9b7a8ef01_add_api_token_scopes.py  d3f4a9c0b1e2_add_hysteria2_chain_variant_b4.py  e1c7a4b9d2f0_add_tracegate21_connection_profiles.py  f2b8c1d4e9aa_add_mtproto_access_grants.py  f6b7c8d9e012_add_v0_connection_variant.py
bundles/: README.md  manifest.yaml
bundles/base-entry/: haproxy.cfg  nftables.conf  nginx.conf  xray.json
bundles/base-transit/: haproxy.cfg  nftables.conf  nginx.conf  xray-ss2022.json  xray.json
bundles/base-vps-e/: hysteria.yaml  nftables.conf  xray.json
bundles/base-vps-t/: hysteria.yaml  nftables.conf  wg0.conf  xray.json
bundles/bot/: guide.md
bundles/users-entry/: README.md
bundles/users-transit/: README.md
bundles/users-vps-e/: README.md
bundles/users-vps-t/: README.md
deploy/: README.md
deploy/env/: agent-vps-e.env.example  agent-vps-t.env.example  bot.env.example  control-plane.env.example
deploy/host/: 90-tracegate-quic.conf  README.md  compose.yaml  deploy.env.example  tracegate-certbot-deploy-hook  tracegate-db-backup  tracegate-host-deploy  tracegate-host-install  tracegate-host.service
deploy/k3s/: README.md  cluster-preflight-check.py  deploy-prod.sh  deploy-ready-check.sh  endpoint-egress-firewall.py  endpoint-ingress-firewall.py  entry-ingress-firewall.py  new-production-values-adapter.py  pod-runtime-readiness.py  prod-overlay-check.py  universal-entry-endpoint-backhaul-firewall.py  universal-entry-origin-firewall.py  values-endpoint-first.example.yaml  values-entry-endpoint.example.yaml  values-prod.example.yaml  values-universal-entry.example.yaml
deploy/scripts/: bootstrap_agent.sh  bootstrap_all_in_one_vps_t.sh  bootstrap_control_plane.sh  k3s_helm_install.sh  k3s_label_nodes.sh  reapply_and_reissue.sh  register_nodes.sh
deploy/systemd/: README.md  entry.env.example  install-runtime.sh  install.sh  render-materialized-bundles.sh  render-xray-centric-overlays.sh  replace-transit-node.sh  shadowtls-transit.env.example  tracegate-agent-entry.service  tracegate-agent-transit.service  tracegate-agent.service  tracegate-api.service  tracegate-backhaul-fragment-config  tracegate-backhaul-fragment@.service  tracegate-bot.service  tracegate-clock-sync-from-rtc.service  tracegate-clock-sync-from-rtc.timer  tracegate-db-backup.service  tracegate-db-backup.timer  tracegate-dispatcher.service  tracegate-entry-firewall.service  tracegate-grafana.service  tracegate-haproxy@.service  tracegate-hysteria-salamander.service  tracegate-hysteria@.service  tracegate-mtproto@.service  tracegate-nginx@.service  tracegate-prometheus.service  tracegate-shadowtls-backhaul-env  tracegate-shadowtls-backhaul.service  tracegate-shadowtls-backhaul2-env  tracegate-shadowtls-backhaul2.service  tracegate-shadowtls-entry-env  tracegate-shadowtls-entry.service  tracegate-shadowtls-entry2-env  tracegate-shadowtls-entry2.service  tracegate-shadowtls-env  tracegate-shadowtls.service  tracegate-telemt-permissions  tracegate-wireguard-sync.service  (+8 more)
docs/: dpi-research-notes.md  endpoint-cdn-fallback.md  entry-endpoint-migration.md  host-vps-sizing.md  ingress-rotation.md  mtproto-entry-endpoint.md  naiveproxy-v4-architecture.md  node-encryption-runbook.md  non-k3s-vps-sizing.md  operator-workflow.md  postgres-backups.md  project-history-summary.md  release-checklist.md  security-boundary.md  telegram-resilience.md  tracegate-2.1-stealth-architecture.md  tracegate-3-architecture.md  universal-entry.md
scripts/: build_release_artifacts.sh  check_host_deploy.py  check_host_runtime.py  check_public_release.py  patch_values_xray_api.py  probe_mtproto.py
tests/: test_admin_reset.py  test_agent_decoy_endpoints.py  test_agent_handlers.py  test_agent_health.py  test_agent_host_metrics.py  test_agent_metrics_aliases.py  test_agent_metrics_protocol_labels.py  test_agent_metrics_wg_labels.py  test_agent_metrics_xray_isolation.py  test_agent_reconcile.py  test_agent_reconcile_index.py  test_aliases.py  test_api_readiness.py  test_backhaul_fragment_config.py  test_backhaul_fronts.py  test_backhaul_observability.py  test_bot_access.py  test_bot_admin_tools.py  test_bot_blocks.py  test_bot_client_connection_revision.py  test_bot_client_mtproto.py  test_bot_client_users.py  test_bot_keyboards.py  test_bot_startup_resilience.py  test_bot_texts.py  test_client_config_bundle.py  test_client_config_tokens.py  test_client_export_config.py  test_config_builder.py  test_connection_variants.py  test_connections_endpoints.py  test_container_baseline.py  test_decoy_auth.py  test_dev_stack_surface.py  test_dispatch_bundles.py  test_dispatcher_ops.py  test_entry_ingress.py  test_entry_ingress_pairs.py  test_firewall_bundles.py  test_github_workflows.py  (+55 more)
(+211 files in other folders)
